syntax = "proto3";
import "protobuf-net/bcl.proto"; // schema for protobuf-net's handling of core .NET types

message DataChangedPubMsg {
   string TurbineId = 1;
   .bcl.DateTime DateTime = 2;
   map<string,string> Values = 3;
   bool NeedsWritingToRedis = 4;
   .bcl.Decimal Amount = 5;
}
